fixed dot visibility

--- a/client/src/components/Nav Menu/NavMenu.css
+++ b/client/src/components/Nav Menu/NavMenu.css
@@ -32,6 +32,12 @@
     text-transform: uppercase;
 }
 
+span.dots {
+    display: none;
+    padding: 0 2em;
+    font-size: 8px;
+}
+
 @media only screen and (min-width: 735px) {
 
     .nav-container {
@@ -62,6 +68,11 @@
         margin: 0 auto;
     }
 
+    .nav-container nav ul li h3:hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
+
     .nav-container nav ul li {
         padding: 0;
         display: flex;
@@ -71,7 +82,10 @@
     }
 
     span.dots {
-        padding: 0 1.5em;
+        padding: 0 2em;
+        font-size: 8px;
+        visibility: visible;
+        display: inline-block;
     }
 
 }
